# ProjCompGrafica24UM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: ph1rep.tex
docs/ph1rep/: conceptualizacao.tex  conclusao.tex  implementacao.tex  introducao.tex  ph1rep.tex  requisitos.tex  resultados.tex
docs/ph2rep/: ph2rep.tex
docs/ph2rep/sub/: concept.tex  intro.tex  req.tex  results.tex
docs/ph3rep/: ph3rep.tex
docs/ph3rep/sub/: conc.tex  concept.tex  implement.tex  intro.tex  req.tex  results.tex
docs/ph4rep/: ph4rep.tex
docs/ph4rep/sub/: conc.tex  concept.tex  implement.tex  intro.tex  req.tex  results.tex
engine/: CMakeLists.txt  demo3.xml  teste.xml
engine/demos/: asolar.xml  bneve.xml  demo1.xml  demo2.xml  ilumin.xml  road.xml  ssolar.xml  teapot.xml  teste.xml
engine/inc/containers/: group.hpp  world.hpp
engine/inc/drawables/: face.hpp  point.hpp  primitive.hpp
engine/inc/lighting/: color.hpp  directional.hpp  light.hpp  point.hpp  spot.hpp
engine/inc/projection/: camera.hpp  window.hpp
engine/inc/texture/: texture.hpp
engine/inc/transforms/: rotate.hpp  scale.hpp  transform.hpp  translate.hpp
engine/inc/transforms/animated/: rotate.hpp  transform.hpp  translate.cpp  translate.hpp
engine/inc/transforms/constant/: rotate.hpp  scale.hpp  transform.hpp  translate.hpp
engine/scripts/: build.sh  configure.sh
engine/src/: engine.cpp
engine/src/containers/: group.cpp  world.cpp
engine/src/drawables/: face.cpp  point.cpp  primitive.cpp
engine/src/lighting/: color.cpp  directional.cpp  light.cpp  point.cpp  spot.cpp
engine/src/projection/: camera.cpp  window.cpp
engine/src/texture/: texture.cpp
engine/src/transforms/: rotate.cpp  scale.cpp  transform.cpp  translate.cpp
engine/src/transforms/animated/: rotate.cpp  transform.cpp  translate.cpp
engine/src/transforms/constant/: rotate.cpp  scale.cpp  transform.cpp  translate.cpp
generator/: CMakeLists.txt
generator/inc/models/: cone.hpp  cylinder.hpp  plane.hpp
generator/inc/patches/: batch.hpp  patch.hpp
generator/inc/primitives/: face.hpp  point.hpp  primitive.hpp
generator/scripts/: configure.sh
generator/src/: generator.cpp
generator/src/models/: box.cpp  cone.cpp  cylinder.cpp  plane.cpp  sphere.cpp
generator/src/patches/: batch.cpp  patch.cpp
generator/src/primitives/: face.cpp  point.cpp  primitive.cpp
includes/containers/: camera.hpp  group.hpp  window.hpp  world.hpp
includes/models/: box.hpp  sphere.hpp
includes/primitives/: face.h  face.hpp  point.h  point.hpp  primitive.hpp
includes/utils/: matrix.hpp
scripts/: build.sh  configure.sh
shared/inc/exception/: unvalues.hpp
shared/inc/geometry/: face.hpp  point.hpp  primitive.hpp
shared/inc/texture/: coordinates.hpp
shared/inc/utils/: matrix.hpp
shared/src/exception/: unvalues.cpp
shared/src/geometry/: face.cpp  point.cpp  primitive.cpp
shared/src/texture/: coordinates.cpp
shared/src/utils/: matrix.cpp
src/: generator.cpp  xml.cpp
src/containers/: camera.cpp  group.cpp  window.cpp  world.cpp
src/drawables/: point.cpp
src/models/: box.cpp  plane.cpp  sphere.cpp
src/primitives/: face.cpp  point.cpp  primitive.cpp
src/utils/: matrix.cpp
